--- a/app/src/main/res/layout/jlk.xml
+++ b/app/src/main/res/layout/jlk.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/lijstfilms"
+        android:id="@+id/jkl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
