--- a/app/src/main/res/layout/beschikbare_films.xml
+++ b/app/src/main/res/layout/beschikbare_films.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/beschikbare_films"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4F8FF7"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/lijstfilms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1"/>
 
 </LinearLayout>
