--- a/app/src/main/res/layout/film_detail.xml
+++ b/app/src/main/res/layout/film_detail.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:id="@+id/filmdetail"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="100dp">
 
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:id="@+id/filmdetail"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="match_parent"
+        android:layout_margin="10dp">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <TextView
+            android:text="filmtitel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/title"
+            android:textStyle="normal|bold"
+            android:textSize="16dp"
+            android:textColor="@android:color/white"
+            android:layout_gravity="top"/>
 
-            <TextView
-                android:text="filmtitel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/title"
-                android:textStyle="normal|bold"
-                android:textSize="18sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="top"/>
+        <TextView
+            android:text="description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:id="@+id/description"
+            android:textSize="14dp"
+            android:textStyle="normal|bold"
+            android:textColor="@android:color/white" />
 
-            <TextView
-                android:text="filmrating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/rating"
-                android:textStyle="normal|bold"
-                android:textColor="@android:color/white" />
+        <TextView
+            android:text="filmrating"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/rating"
+            android:textSize="14dp"
+            android:textStyle="normal|bold"
+            android:textColor="@android:color/white" />
 
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
