--- a/app/src/main/res/layout/beschikbare_films.xml
+++ b/app/src/main/res/layout/beschikbare_films.xml
@@ -20,7 +20,7 @@
             android:text="Beschikbare films"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="30sp" />
+            android:textSize="30dp" />
 
     </LinearLayout>
 
