--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,6 @@
     android:background="#4F8FF7"
     tools:context="nl.avans.film_app.MainActivity">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        //Filler
-    </View>
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -50,8 +43,9 @@
 
     <Button
         android:id="@+id/activity_login_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="1"
         android:text="Login" />
 
