--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -12,9 +12,8 @@
         android:id="@+id/activity_film_detail_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:background="@color/colorPrimary"
-        android:layout_margin="4dp">
+        android:layout_margin="4dp"
+        android:background="@color/colorPrimary">
 
     </ImageView>
 
@@ -22,21 +21,22 @@
         android:id="@+id/activity_film_detail_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:fontFamily="Verdana"
         android:text="Film titel"
         android:textAlignment="center"
         android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/activity_film_detail_description"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="1"
         android:fontFamily="Verdana"
+        android:gravity="center_horizontal"
         android:text="Beschrijving"
-        android:textSize="16dp"/>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/activity_film_detail_rating"
@@ -44,8 +44,9 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:fontFamily="Verdana"
+        android:gravity="center_horizontal"
         android:text="Rating"
-        android:textSize="16dp"/>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/activity_film_detail_status"
@@ -55,13 +56,17 @@
         android:fontFamily="Verdana"
         android:text="Status"
         android:textAlignment="center"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/activity_film_detail_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:text="Huur deze film"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.5"
+        android:background="@android:color/background_dark"
+        android:padding="2dp"
+        android:text="Huur deze film"
+        android:textColor="@android:color/background_light" />
 </LinearLayout>
