--- a/app/src/main/res/layout/film_detail.xml
+++ b/app/src/main/res/layout/film_detail.xml
@@ -5,44 +5,46 @@
     android:id="@+id/filmdetail"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:weightSum="1">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        android:layout_weight="0.94"
+        android:orientation="vertical">
 
         <TextView
-            android:text="filmtitel"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/title"
-            android:textStyle="normal|bold"
-            android:textSize="16dp"
+            android:layout_gravity="top"
+            android:layout_weight="2"
+            android:text="filmtitel"
             android:textColor="@android:color/white"
-            android:layout_gravity="top"/>
+            android:textSize="16dp"
+            android:textStyle="normal|bold" />
 
         <TextView
-            android:text="description"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:id="@+id/description"
-            android:textSize="14dp"
-            android:textStyle="normal|bold"
-            android:textColor="@android:color/white" />
+            android:text="description"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="normal|bold" />
 
         <TextView
-            android:text="filmrating"
+            android:id="@+id/rating"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/rating"
-            android:textSize="14dp"
-            android:textStyle="normal|bold"
-            android:textColor="@android:color/white" />
+            android:layout_weight="2"
+            android:text="filmrating"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="normal|bold" />
 
     </LinearLayout>
 
